Disable premium page blob tiers; Add missing tiers in swagger
